# redtrail

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  PENTESTER_MINDSET.md  README.md  TESTING_PLAN.md  dev.sh
docs/: prd-agent-architecture.md  prd-documentation-site.md
docs-site/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
eval/: .last_passing  Dockerfile  loop.sh  motd.sh  program.md  results.tsv  score.sh  starship.toml  weights.env
eval/goals/: feature-claude-code-extraction.md  feature-init.md  feature-kb-query.md
eval/metrics/: code-quality.sh
eval/tests/: agent-context.llm.sh  agent-context.sh  forget.sh  (+46 more)
plans/: agent-architecture.md  documentation-site.md  global-db-config.md
scripts/: live-test.sh
src/: cli.rs  config.rs  context.rs  db.rs  db_v2.rs  error.rs  extraction.rs  lib.rs  main.rs  net.rs  pipeline.rs  resolve.rs  skill_loader.rs  spawn.rs  types.rs  workspace.rs
tasks/: prd-agent-architecture.json  prd-docs-site.json  prd-probe-v2.json  prd-strategist-architecture.md  prd-strategist.json  prd.json
tests/: agent_capture_test.rs  agent_context_test.rs  agent_detect_test.rs  agent_report_test.rs  analysis_test.rs  blacklist_test.rs  block_content.rs  block_rendering_integration.rs  block_view.rs  capture_cli_test.rs  capture_extract_test.rs  capture_stdout_test.rs  capture_test.rs  chat_context.rs  chat_stream.rs  classify_test.rs  command_parse_test.rs  command_resolve.rs  completion_engine.rs  config_test.rs  context_cli_test.rs  db_test.rs  db_v2_schema.rs  duration_test.rs  e2e.rs  entities_cli_test.rs  entity_cli_test.rs  env.rs  env_snapshot_test.rs  errors_test.rs  event_bus.rs  export_test.rs  extract_cli_test.rs  extract_db_test.rs  extract_docker_test.rs  extract_domain_test.rs  extract_generic_test.rs  extract_git_test.rs  extract_llm_test.rs  extract_parse_test.rs  (+57 more)
(+313 files in other folders)
