[package]
name = "redtrail"
version = "0.2.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "rt"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
portable-pty = "0.9"
aisdk = { version = "0.5", features = ["anthropic", "openaichatcompletions"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1.89"
async-stream = "0.3.6"
inventory = "0.3"
sha2 = "0.10"
libc = "0.2"
schemars = "1"

[dev-dependencies]
tempfile = "3"
