[package]
name = "redtrail"
version = "0.2.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "redtrail"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
inventory = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
serde_yaml = "0.9"
shell-words = "1"
nix = { version = "0.29", features = ["term", "signal", "poll", "fs"] }
strip-ansi-escapes = "0.2"

[dev-dependencies]
tempfile = "3"
